# pyfao56

./: LICENSE  LICENSE.md  README.md  meta.yaml  setup.cfg
pyfao56/: model.py  parameters.py  refet.py  update.py  weather.py
pyfao56/custom/: forecast.py
src/pyfao56/: __init__.py  __version__.py  autoirrigate.py  irrigation.py  model.py  parameters.py  refet.py  soil_profile.py  soil_water.py  update.py  weather.py
tests/test01/: cotton2013.par  cotton2013.wth  cottondry2013.irr  cottondry2013.out  cottondry2013.py  cottondry2013.sum  cottondry2013B.out  cottonwet2013.irr  cottonwet2013.out  cottonwet2013.sum  cottonwet2013B.out
tests/test02/: AZMET_Maricopa_ETo.wth  AZMET_Maricopa_ETr.wth  AZMET_Maricopa_hourlyEToETr.def  RefET.csv  RefET.def  RefET.in1  RefET.in2  RefET.out  outputA.csv  refet_testA.py  refet_testC.py
tests/test03/: cotton2019.irr  cotton2019.out  cotton2019.par  cotton2019.sum  cotton2019.upd  cotton2019.wth  cotton2019B.out  updateKcb.py
tests/test04/: cotton2018.par  cotton2018.wth  cotton2018_060.irr  cotton2018_060.out  cotton2018_060.sum  cotton2018_060B.out  cotton2018_100.irr  cotton2018_100.out  cotton2018_100.sum  cotton2018_100B.out  cotton2018_120.irr  cotton2018_120.out  cotton2018_120.sum  cotton2018_120B.out
tests/test05/: E12FF2022.out  E12FF2022.par  E12FF2022.sol  E12FF2022.sum  E12FF2022.upd  E12FF2022B.out  E12FF2022_CCKcb.out  E12FF2022_CCKcb.sum  E12FF2022_CCKcbB.out  E12FF2022_Soil.out  E12FF2022_Soil.sum  E12FF2022_SoilB.out  E12FF2022_default.out  E12FF2022_default.sum  E12FF2022_defaultB.out  LIRF.wth  (+1 more)
(+791 files in other folders)
