[metadata]
name = pyfao56
version = 1.0.4
author = Dr. Kelly R. Thorp
author_email = kelly.thorp@usda.gov
description = FAO-56 in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/kthorp/pyfao56
project_urls =
    Source = http://github.com/kthorp/pyfao56
    Bug Tracker = http://github.com/kthorp/pyfao56/issues
license = Public Domain
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = pyfao56
python_requires = >=3.7
install_requires =
    pandas
    numpy
    requests
    urllib3

[options.packages.find]
where = pyfao56
